mbaas-developer-preview/sample-spring-apps/customer/01--deployment--customer.yaml
## Copyright (c) 2022, Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: iad.ocir.io/maacloud/atest/customer:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        # resources:
        #     requests:
        #       memory: "500Mi"
        #       cpu: "500m"
        #     limits:
        #       memory: "1Gi"
        #       cpu: "500m"
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 70
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
          - name: tns-admin
            mountPath: /oracle/tnsadmin
      volumes:
        - name: tns-admin
          secret:
            secretName: "obaaststpsdb-tns-admin"
      imagePullSecrets:
      - name: registry-auth
