mbaas-developer-preview/sample-spring-apps/customer/03--ingress--customer.yaml
## Copyright (c) 2022, Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-ingress
  namespace: application
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - secretName: ssl-certificate-secret
  rules:
  - http:
      paths:
      - path: /customer(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: customer
            port:
              number: 8080
